# multiplayer-game

./: CMakeLists.txt  build.sh  client.cpp  client.sh  server.cpp  server.sh
include/: client.hpp  console.hpp  mutex.hpp  socket.hpp
src/: client.cpp  console.cpp  mutex.cpp  socket.cpp
